--- a/index.css
+++ b/index.css
@@ -81,6 +81,14 @@ h1:hover{
    width: 100vw;
 }
 
+#logo1{
+    transition: opacity 4s ease-out;
+    -webkit-transition: opacity 4s ease-out;
+    -moz-transition: opacity 4s ease-out;
+    -ms-transition: opacity 4s ease-out;
+    -o-transition: opacity 4s ease-out;
+}
+
 #IC_C1{
     display: flex;
     justify-content: center;
