--- a/contactus.css
+++ b/contactus.css
@@ -11,6 +11,45 @@ body{
     font-family: 'NettoOT'  !important;
 }
 
+.navbar{
+    display: flex;
+    width: 100vw;
+    max-width: 100vw;
+    flex-wrap: wrap;
+    align-items: center;
+    /* border-bottom: 0.3vh solid white; */
+    height: 7vh;
+    margin: 0;
+    background-color:#2490D6;
+    border-bottom: 0.25vh solid white;
+}
+
+.navbar li{
+    list-style-type: none;
+    display: inline;
+}
+
+.navbar a{
+    text-decoration: none;
+    color: white;
+    margin-left: 1vw;
+    transition: all 0.2s ease-in-out;
+    font-size: 1rem;
+}
+
+.navbar a:hover{
+    text-decoration: none;
+    border-bottom: 0.3vh solid #f0e912;
+    transition: all 0.2s ease-in-out;
+}
+
+.navbar img{
+    margin-right: 2vw;
+    height: 5vh;
+    width: auto;
+    
+}
+
 .lanworks-titel-container{
     display: flex;
     align-items: center;
@@ -98,5 +137,16 @@ body{
 .tekstFooterLanworks{
     color: white;
     margin-left: 5vw;
+}
+
+@media screen and (max-width: 800px) {
+    #bars{
+        display: inherit;
+        margin-right: 5vw;
+    }
+
+    .leftAligned li{
+        display: none;
+    }
 }
 
