--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body{
     padding: 0;
     max-width: 100%;
     font-family: 'NettoOT';
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     position: relative;
 }
 
