--- a/index.css
+++ b/index.css
@@ -4,15 +4,15 @@
 }
 
 html{
-    overflow-x: hidden;
+    
 }
 body{
     /* display:flex; */
     margin: 0;
     padding: 0;
-    max-width: 100%;
+    width: 100%;
     font-family: 'NettoOT';
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     position: relative;
 }
 
